<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.24">
  <DUT Name="ST_UAMethodCall_CallTestMethodArray" Id="{67f2fe9d-b006-4208-8298-13fcbdf660bf}">
    <Declaration><![CDATA[TYPE ST_UAMethodCall_CallTestMethodArray :
STRUCT
	nNumberOfOutputArguments	: UDINT;	(* 4*)
	nReserved					: ARRAY [1..4] OF BYTE; // padding
	stOutputArgInfo				: ARRAY [1..2] OF ST_UAMethodArgInfo;	(* 24 + 24 *)
	//If dynamic out params are in front of others: they need to be memcpyed afterwards.
	//OutputData					: ARRAY [1..8] OF BYTE;
	//This testmethod just returns 2 DINTs so we could directly define them here
	output1						: ARRAY[1..10] OF LREAL; (* 80 *)
	output2						: ARRAY[1..10] OF STRING;  (* 810 *)
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>